<resources>
    <string name="app_name">電子母子健康手帳</string>
    <string name="hello_world">Hello world!</string>
    <string name="ButtonNext">次の項目</string>
    <string name="ButtonBack">前の項目</string>
    <string name="ButtonMneu">目次へ</string>
    <string name="write_9_1_title">生後4週間まで</string>
    <string name="write_9_2_title">1か月頃</string>
    <string name="write_9_3_title">3～4か月頃</string>
    <string name="write_9_4_title">6～7か月頃</string>
    <string name="write_9_5_title">9～10か月頃</string>
    <string name="write_9_6_title">1歳の頃</string>
    <string name="write_9_7_title">1歳6か月の頃</string>
    <string name="write_9_8_title">2歳の頃</string>
    <string name="write_9_9_title">3歳の頃</string>
    <string name="write_9_10_title">4歳の頃</string>
    <string name="write_9_11_title">5歳の頃</string>
    <string name="write_9_12_title">6歳の頃</string>
    <string name="write_9s_1_title1">早期新生児期【生後１週間以内】の経過</string>
    <string name="write_9s_1_title2">退院時の記録</string>
    <string name="write_9s_1_title3">晩期新生児期【生後１～４週】の経過</string>
    <string name="read_1_title">1.すこやかな妊娠と出産のために</string>
    <string name="read_1_description">妊娠・出産は女性にとって大きなドラマです。からだの変化に気をつけながら、充実した毎日を送りましょう。</string>
    <string name="read_1_1_title">●妊娠中は無理をしないで</string>
    <string name="read_1_1_description">
        　おなかの赤ちゃんの発育はめざましく、それにつれて母体にもいろいろな変化が起こってきます。特に妊娠初期である11週（第3月）ごろまでと、妊娠末期28週（第8月）以降はからだの調子も変わりやすい時期です。家事や仕事の合間に午前と午後の1回ずつ、少しの時間でも横になって休むなど、仕事の仕方や休息の方法を工夫しましょう。無理はせず、「ふだんの8割程度」を目安にペースダウンを。\n
    </string>
    <string name="read_1_2_title">●妊婦健康診査は必ず受けましょう</string>
    <string name="read_1_2_description">
        　妊娠中はふだんよりいっそう健康に気をつけなければなりません。特に気がかりなことがなくとも、からだにはいろいろな変化が起こっています。少なくとも次のような間隔で定期的に産婦人科などで健康診査を受け、胎児の育ち具合や血圧・尿などをチェックしてもらいましょう。\n
        　特に注意しなければならないのは貧血や妊娠高血圧症候群、妊娠糖尿病で、どれも胎児の発育に影響し、母体の健康を損なうことがあります。妊娠22週以降は早産にも注意しなければなりません。そのためにもきちんと健康診査を受け、医師の指導を守りましょう。\n
        　\n　●妊娠23週まで … 4週に1回\n
        　●妊娠24～35週まで … 2週に1回以上\n
        　●妊娠36週以降出産まで … 毎週1回\n
    </string>
    <string name="read_1_3_title">●専門家の指導を積極的に受けて</string>
    <string name="read_1_3_description">
        　妊娠中を健康に過ごし、お産を無事に迎えるためには、日常生活や環境、栄養などいろいろなことに気を配る必要があります。医師・歯科医師・助産師・保健師・歯科衛生士・栄養士などの指導を積極的に受け、妊娠や出産に関して悩みや不安があるときは遠慮せずに相談しましょう。\n
        　両親学級・母親学級も役立つ情報を提供しています。\n
    </string>
    <string name="read_1_4_title">●薬の影響について</string>
    <string name="read_1_4_description">
        　妊娠中の薬の服用については、事前に目的、必要性、効果、副作用など医師および薬剤師から十分な説明を受けましょう。また指示された使い方や量を守りましょう。また、出産時に使用される薬についても、必要性、効果、副作用などについて医師から十分な説明を受けましょう。\n
    </string>
    <string name="read_1_5_title">●たばこ・お酒の害から赤ちゃんを守りましょう</string>
    <string name="read_1_5_description">
        　妊娠中の喫煙は、胎児の発育を遅延させ、妊婦や赤ちゃんのそばでの喫煙は乳幼児突然死症候群（SIDS）と関係することが知られています。妊婦自身の禁煙はもちろんのこと、お父さんなど周囲の人も、妊婦や赤ちゃんのそばで喫煙してはいけません。\n
        　出産後に喫煙を再開してしまうお母さんもいますが、出産後もお母さん自身や赤ちゃんのために、たばこはひかえましょう。\n
        　また、アルコールも胎盤を通過しやすく、胎児の発育に影響をおよぼします。妊娠したら、飲酒はしないようにしましょう。出産後も授乳中は飲酒をひかえましょう。\n
    </string>
    <string name="read_1_6_title">●むし歯や歯周病に気をつけて</string>
    <string name="read_1_6_description">
        　むし歯や歯周病などの病気は妊娠中に悪くなりやすいものです。歯みがきなど口腔の清潔を十分心がけるとともに、つわりが終わったら歯の検診を受けましょう。歯科医師を受診するときは妊娠中であることを必ず伝えてください。\n
    </string>
    <string name="read_1_7_title">●妊娠中の夫の役割</string>
    <string name="read_1_7_description">
        　妊娠中の女性の心身の安定には、夫や家族など周囲の人の理解と協力が必要です。夫は妻をいたわったり、ねぎらったりするほか、家事も積極的に行ないましょう。\n
        　妻の妊娠の約40週間は、夫にとっても「父親」として育っていく大切な準備期間です。この時期に、ふたりにとって子どもとはどんな存在か、親になるとはどいういうことか、またお産のときや産後の育児で夫がどのような役割を持つのか、妊娠中からよく話しあい、準備しておきましょう。\n
    </string>
    <string name="read_1_8_title">●赤ちゃんと家族のかかりつけ医</string>
    <string name="read_1_8_description">
        　赤ちゃんのために自宅近くで小児科のかかりつけ医を探しておきましょう。妊娠中に小児科を訪問して、育児についてアドバイスを受けておくのもいい方法です。\n
    </string>
    <string name="read_1_8_footnote">
        ※一部の自治体では無料の小児科アドバイスを実施しています。\n
    </string>
    <string name="read_1_9_title">●母乳の準備を始めます</string>
    <string name="read_1_9_description">
        　赤ちゃんにいちばん適している栄養は母乳です。妊娠中から「母乳で育てよう」という心がまえをもち、胎動を感じたら医師や助産師などの指導を受けて乳首や脂肪の手入れを始めましょう。母乳は赤ちゃんのすこやかな成長によいだけでなく、産後の母体の回復も促してくれます。\n
    </string>
    <string name="read_1_10_title">●里帰りのお産</string>
    <string name="read_1_10_description">
        　里帰り分娩を望むときは前の医師から紹介状をもらいます。また分娩前後を住所地以外で過ごす場合は、住所地および帰省先の市区町村の母子保健担当にその旨を申し出、その地域の母子保護サービスの説明を受けましょう。\n
    </string>
    <string name="read_1_1_column_title">産後の健康にも注意して</string>
    <string name="read_1_1_column_description">
        　お産後は赤ちゃんの世話に追われて、自分のからだの不調やトラブルをあとに回しがちです。経過が順調と思われるときでも、お産後1～2か月目ごろには産婦人科医の診察を受けましょう。また、妊娠中や分娩のときに異常があった場合は、ひきつづきその治療を受けることが必要です。\n
    </string>
    <string name="read_5no1_title">5.1.育児のしおり　新生児期（生後約4週間まで）</string>
    <string name="read_5no1_description">生まれてからの約4週間を新生児期といいます。特に最初の2週間はお母さんの体内とはまったく違う環境の中で自分の力で育っていくことに慣れるのに大切な時期。次のような点に配慮しましょう。</string>
    <string name="read_5no1_1_title">●静かな環境に寝かせてあげて</string>
    <string name="read_5no1_1_description">
        　おっぱいを飲むときのほかはうつらうつらしている子もいるし、小さな音にも反応してすぐ目を覚ます子もいます。赤ちゃんもこのころから個性があるのですね。母体を離れての生活に無理なく慣れるよう、赤ちゃんは清潔で静かな場所にゆったり寝かせましょう。\n
        　医学上の理由で医師からうつぶせ寝をすすめられている場合以外は、赤ちゃんの顔が見えるあおむけに寝かせましょう。また、できるだけ赤ちゃんをひとりにしないようにしましょう。これらのことは、窒息や誤飲、けがなどの事故を未然に防ぐことにつながります。\n
    </string>
    <string name="read_5no1_2_title">●部屋の温度</string>
    <string name="read_5no1_2_description">
        　赤ちゃんは自分で体温を調節することがまだうまくできないので、室温はなるべく20℃以下にならないように保ちます。暑すぎたり寒すぎたりしないようにします。暑い季節は除湿機能や冷房もじょうずに使いましょう。風は、赤ちゃんに直接あたらないように気をつけます。こまめに換気し、室内の空気を新鮮に保つことも忘れないでください。\n
    </string>
    <string name="read_5no1_3_title">●清潔を保ち、病気から守りましょう</string>
    <string name="read_5no1_3_description">
        　新生児期は細菌やウイルスなど病原体に対する抵抗力が特に弱いものです。赤ちゃんのお世話をする前には手を洗い、寝具や衣類、おむつなどはいつも清潔なものを使いましょう。沐浴は毎日して、皮膚を清潔に保ってあげましょう。\n
        　かぜなど感染症が疑われる大人は赤ちゃんに近づいたり抱いたりしない、むやみに赤ちゃんを連れて人混みに出ないなども、この時期は大切です。\n
    </string>
    <string name="read_5no1_4_title">●母乳が出なくてもあせらずに</string>
    <string name="read_5no1_4_description">
        　新生児には母乳が第一です。母乳栄養は赤ちゃんの病気を防ぎ、赤ちゃんとお母さんのきずなを強くします。また、かむ力の発達に大切です。\n
        　特に初乳は赤ちゃんが初めて口にする食物としてかけがえのないものですから、ぜひ与えたいものです。母乳が出ないようでも、あせらずに、赤ちゃんが欲しがるにまかせて根気よく吸わせていると出るようになります。母乳の出をよくするためには、お母さんがバランスのよい栄養と休息をとることも大切です。\n
        　授乳中はテレビなども消して、ゆったりした気持ちで赤ちゃんと向きあいましょう。\n
    </string>
    <string name="read_5no1_4_footnote">
        ※母乳育児の悩みや乳房のトラブルには、産婦人科医だけでなく助産師もよい相談役です。最近は「母乳外来」「助産師外来」などを設けている医療機関もありますから、気軽に相談しましょう。\n
    </string>
    <string name="read_5no1_5_title">●先天性代謝異常等の検査を受けましょう</string>
    <string name="read_5no1_5_description">
        　すべての新生児を対象として、血液を用いてフェニールケトン尿症（PKU）などの先天性代謝異常検査や先天性甲状腺機能低下症の検査が行われています。これらの病気は早期に発見することによって、特殊ミルクや甲状腺ホルモンなどで治療することができます。なお、小児の先天性代謝異常のための特殊ミルクは無償で提供されます（小児科のかかりつけ医に相談してください）。\n
    </string>
    <string name="read_5no1_5_footnote">
        ※PKUの女性は、妊娠にあたっては、胎児の障害を予防するため、医師の治療・管理を受ける必要があります。PKUの女児の保護者の方は、将来お子さんが子供を産む年齢に達したら、妊娠する前に医師に相談するようお子さんをご指導ください。\n
    </string>
    <string name="read_5no1_1_column_title">新生児聴覚スクリーニング検査</string>
    <string name="read_5no1_1_column_description">
        　生まれつきの難聴や新生児期に発生する聴覚障害は1000人に1～2人といわれています。聴覚障害は早く発見し、早期に適切な療育指導を始めることで言葉の発達の遅れなども防ぐことが可能です。そのため、現在は「新生児聴覚スクリーニング検査」を行っている医療機関もあります。赤ちゃんが眠っている間に行える検査です。希望する場合は、医師などにたずねてみるといいでしょう。\n
    </string>
    <string name="read_5no1_6_title">●乳幼児突然死症候群（SIDS）の予防のために</string>
    <string name="read_5no1_6_description">
        　１：赤ちゃんを寝かせるときは、あおむけ寝にしましょう。ただし、医学上の理由から医師がうつぶせ寝をすすめる場合もあるので、このようなときは医師の指導を守りましょう。\n
        　２：妊婦自身はもちろん、妊娠中の女性や赤ちゃんの周囲で、お父さんなど家族や周囲の人はたばこを吸ってはいけません。\n
        　３：できるだけ母乳で育てましょう。\n
    </string>
    <string name="read_5no1_6_footnote">
        ※SIDSとは、それまで元気であった赤ちゃんが睡眠中に何の前ぶれもなく亡くなってしまう病気で、窒息などの事故によるものとは違います。毎年300～500人の赤ちゃんがこの病気で亡くなっており、乳児期の死亡原因としては第3位となっています。原因はあまりわかっていませんが、上述の1から3の点を日ごろから心がけることで、この病気の発生を減らせることがわかっています。\n
    </string>
    <string name="read_5no1_2_column_title">こんなときは小児科へ！</string>
    <string name="read_5no1_2_column_description">
        　赤ちゃんが次のような様子のときは、すみやかに小児科を受信しましょう。\n
        　●発熱した\n
        　●顔色が悪い\n
        　●呼吸が苦しそう\n
        　●ぐったりしている\n
        　●せきがおさまらない\n
        　●下痢や嘔吐がある\n
        　●便が白い・赤い・黒い\n
        　●皮膚や白目が黄色い（強い黄疸）\n
        　●いつもにくらべて食欲がない・元気がない・反応が鈍い\n
        　●授乳のたびに勢いよく吐き、体重が増えない・吐き方が激しくなる\n
        　●けいれんを起こした\n
    </string>
    <string name="read_5no1_2_column_footnote">
        　出生体重が2500g未満の赤ちゃんや、病気などがある子は保健所や市町村保健センターの指導が受けられるので、出産後連絡をしましょう。公費による医療が受けられることもありますから、積極的に相談してください。\n
    </string>
    <string name="read_10_title">10.1.子育てのサポート</string>
    <string name="read_10_description">慣れない育児は心身ともに負担が大きく、つらさやストレスを感じることもあるでしょう。そのつらさをひとりでかかえこまず、遠慮せず助けを求めてください。</string>
    <string name="read_10_1_title">●周囲の人に積極的に相談を</string>
    <string name="read_10_1_description">
        　自分の健康や子育てについて不安や悩みがあるときは、家族や夫に自分の気持ちを言葉にして伝え、話しあってみてください。特に夫は妻を孤立させないよう、ふだんからよく話をすることがとても大切です。
    </string>
    <string name="read_10_2_title">●地域の子育てネットワークを</string>
    <string name="read_10_2_description">
        　家族以外にも、子育ての助けになる人を探してみましょう。子どもは多くの人に支えられて育っていきます。お母さん・お父さんだけで悩まず、地域の保健所・保健センターの医師、助産師、保健師や、かかりつけの小児科医などに気軽に相談してみましょう。\n
        　また、母親（両親）学級で知り合った親子、近隣の子育てボランティアなどは、身近なところで子育てをいっしょに考えてくれる仲間です。育児相談や地域の子育て教室、子育てサークルなどを利用して、こうした知りあいをつくるのも、お母さん・お父さんのストレス軽減に役立ちます。
    </string>
    <string name="read_10_2_footnote">
        <b>インターネットで子育て情報をチェック</b>\n
        子育てを応援するさまざまなサイトもあります。\n
    </string>
    <string name="read_10_2_column_title">ストレスを感じていませんか？</string>
    <string name="read_10_2_column_description">
        次のようなことを感じるときは、周囲の人にぜひ相談してください。\n
        <b>●不安になったり、気分がおちこむ　●不眠・イライラがある　●なぜか疲れる　●体調がすぐれない　●子育てが楽しくない　●子どもがかわいいと思えない　●子どもの遊ばせ方がわからない・どう接したらいいのかわからない</b>
    </string>
    <string name="read_10_3_title">●赤ちゃんのことでイライラしてしまったら</string>
    <string name="read_10_3_description">
        　言葉を話すことのできない赤ちゃんは、「おなかがすいた」「おむつが汚れて気持ちが悪い」「暑い・寒い」「抱っこしてほしい」などの気持ちを泣くことで伝えています。慣れてくると、だんだんなぜ泣いているのか、何をしてほしいのかもわかるようになるでしょう。\n
        　でも、赤ちゃんの泣き声をつらく感じたり、何をしても泣きやまないときに、ついイライラして、自制心を失いそうになることもあります。\n
        　こんなときは、「何度か深呼吸をする」、「赤ちゃんを安全なところにひとまず寝かせて自分はその場をいったん離れる」、「誰かと言葉をかわす」などして、自分の気持ちをまず落ち着かせましょう。保健所・保健センターの医師、助産師、保健師やかかりつけの小児科医に相談しましょう。
    </string>
    <string name="read_10_3_footnote">
        ※赤ちゃんや小さな子どもは、激しくゆさぶられたり、たたかれたりするような大きな衝撃を与えられると、身体（特に脳や視神経）が損傷を受け、重大な障害が残ったり死亡することもあります。ぜったいにしないでください。軽症の場合でも、食用の低下、ぐずりが多いなど、はっきりしない症状がつづくこともあります。気になることがあったら、かかりつけの小児科医に相談しましょう。
    </string>
    <string name="read_10_4_title">●産後、気分が落ち込むときは</string>
    <string name="read_10_4_description">
        　産後のお母さんは、イライラや不安、涙もろい、疲労感、さらに食欲不振や頭痛などを感じることが少なくありません。これはホルモンなど産後のからだの変化や、慣れない育児の疲れなどが原因とされています。\n
        　しかし、ほとんど１日じゅう気分がしずむ、赤ちゃんに何の感情もわいてこない、自分に価値がないと感じる、疲れがとれない、気力がわかない、食欲の低下・増加、不眠・過眠がつづくようでしたら、「産後うつ病」の心配があります。\n
        　お母さん自身も赤ちゃんの世話に追われていたり、お父さんなど周囲の人も赤ちゃんのことで頭がいっぱいで、こうしたお母さんの変化を見過ごしがちです。「気分が落ち込む」「産後うつ病かもしれない」と自分で思ったとき、あるいや周囲が気づいたときは、迷わず医師、助産師、保健師に相談しましょう。
    </string>
    <string name="read_10_5_title">●地域の相談機関を十分に活用して</string>
    <string name="read_10_5_description">
        　地域には、お母さん・お父さんのいろいろな悩みを聞いたり、子育てに関する相談にのってくれるところがあります。そこでは保健・医療・福祉の専門家が電話、面接などで相談にのるほか、保健師などが自宅を訪問してお話をうかがうことができる場合もあります。これらは気軽に利用できますし、担当者は秘密を守る義務があります。悩んだり、困ったりしたら、まず相談してみましょう。\n\n
        <b>●お母さん・お父さんの体や心の悩み、子どもの発育や発達、子育てのしかたに関する相談は……</b>かかりつけ医療機関／市町村保健センター／保健所／精神保健福祉センター\n\n
        <b>●養育上の悩みやしつけなどに関する相談は……</b>地域子育て支援センター／保育所／児童館／主任児童委員／民生・児童委員／福祉事務所／児童相談所\n\n
        <b>●地域の育児サポート……</b>育児に疲れてしまったときや、保護者が病気になったときなど、保育所などで子供を一時的にあずかる「一時預かり」や、地域における育児の相互援助活動を行う「ファミリー・サポート・センター」、ほか家事支援や育児指導などを行う家庭訪問を行っている地域もあります。
    </string>
    <string name="read_10_5_footnote">
        ＊地域によって、このほかさまざまな行政サービスを利用できる場合もあります。居住地の行政サービスのガイド冊子（『暮らしの手帳』など）も参考にして、市区町村の保健・福祉の担当課に気軽にお問い合わせください。\n\n
        ＊あなたの子育ての情報源や相談先を、巻末の「連絡用メモ」に記入しておきましょう。
    </string>
    <string name="read_10_5_column_title">不安に思っていませんか？</string>
    <string name="read_10_5_column_description">
        子どものことで不安に思っていることはありませんか。積極的にかかりつけ小児科医や、地域の保健所・保健センターなどに相談を。\n
        <b>●発育・発達の不安　●寝つきが悪い、母乳や離乳食など育児上の悩み　●保育園・幼稚園の友だちや先生になじめない　●言葉がはっきりしない　●呼んでも振り向かない　●興味を示すものが限られている　●集団の中で落ち着いていられない　●同じ言葉をくり返す　……など</b>
    </string>
</resources>