<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="wrap_content"
  android:layout_height="wrap_content" android:orientation="vertical" android:background="@drawable/background_pink">

            <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="35dp"
        android:gravity="center" >


        <Button
            android:id="@+id/read_button_5_1_back"
            style="@style/button_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ButtonBack" />



        <Button
            android:id="@+id/read_button_5_1_mneu"
            style="@style/button_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ButtonMneu" >

        </Button>



        <Button
            android:id="@+id/read_button_5_1_next"
            style="@style/button_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            
            android:text="@string/ButtonNext" >

        </Button>
        >

    </LinearLayout>
    
<ScrollView
	android:id="@+id/ScrollView01"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content">

<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="wrap_content"
  android:layout_height="wrap_content" android:orientation="vertical">

	<TextView
		android:text="@string/read_5no1_title"
		android:id="@+id/read_5no1_title"
		style="@style/read_x_title" />

	<TextView
		 android:text="@string/read_5no1_description"
		 android:id="@+id/read_5no1_description"
		 style="@style/read_x_description"/>

	<TextView
		android:text="@string/read_5no1_1_title"
		android:id="@+id/read_5no1_1_title"
		style="@style/read_x_x_title" />

	<TextView
		 android:text="@string/read_5no1_1_description"
		 android:id="@+id/read_5no1_1_description"
		 style="@style/read_x_x_description"/>

	<TextView
		android:text="@string/read_5no1_2_title"
		android:id="@+id/read_5no1_2_title"
		style="@style/read_x_x_title" />

	<TextView
		 android:text="@string/read_5no1_2_description"
		 android:id="@+id/read_5no1_2_description"
		 style="@style/read_x_x_description"/>

	<TextView
		android:text="@string/read_5no1_3_title"
		android:id="@+id/read_5no1_3_title"
		style="@style/read_x_x_title" />

	<TextView
		 android:text="@string/read_5no1_3_description"
		 android:id="@+id/read_5no1_3_description"
		 style="@style/read_x_x_description"/>

	<TextView
		android:text="@string/read_5no1_4_title"
		android:id="@+id/read_5no1_4_title"
		style="@style/read_x_x_title" />

	<TextView
		 android:text="@string/read_5no1_4_description"
		 android:id="@+id/read_5no1_4_description"
		 style="@style/read_x_x_description"/>

	<TextView
		 android:text="@string/read_5no1_4_footnote"
		 android:id="@+id/read_5no1_4_footnote"
		 style="@style/read_x_x_footnote"/>

	<TextView
		android:text="@string/read_5no1_5_title"
		android:id="@+id/read_5no1_5_title"
		style="@style/read_x_x_title" />

	<TextView
		 android:text="@string/read_5no1_5_description"
		 android:id="@+id/read_5no1_5_description"
		 style="@style/read_x_x_description"/>

	<TextView
		 android:text="@string/read_5no1_5_footnote"
		 android:id="@+id/read_5no1_5_footnote"
		 style="@style/read_x_x_footnote"/>

	<TextView
		android:text="@string/read_5no1_1_column_title"
		android:id="@+id/read_5no1_1_column_title"
		style="@style/read_x_x_title" />

	<TextView
		 android:text="@string/read_5no1_1_column_description"
		 android:id="@+id/read_5no1_1_column_description"
		 style="@style/read_x_x_description"/>

	<TextView
		android:text="@string/read_5no1_6_title"
		android:id="@+id/read_5no1_6_title"
		style="@style/read_x_x_title" />

	<TextView
		 android:text="@string/read_5no1_6_description"
		 android:id="@+id/read_5no1_6_description"
		 style="@style/read_x_x_description"/>

	<TextView
		 android:text="@string/read_5no1_6_footnote"
		 android:id="@+id/read_5no1_6_footnote"
		 style="@style/read_x_x_footnote"/>

	<TextView
		android:text="@string/read_5no1_2_column_title"
		android:id="@+id/read_5no1_2_column_title"
		style="@style/read_x_x_title" />

	<TextView
		 android:text="@string/read_5no1_2_column_description"
		 android:id="@+id/read_5no1_2_column_description"
		 style="@style/read_x_x_description"/>

	<TextView
		 android:text="@string/read_5no1_2_column_footnote"
		 android:id="@+id/read_5no1_2_column_footnote"
		 style="@style/read_x_x_footnote"/>


</LinearLayout>
</ScrollView>
</LinearLayout>